<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">MySmartX</string>
    <string name="input_phone_email">请输入手机号或邮箱</string>
    <string name="input_pwd">输入密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="regist">注册</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="video_service">视频服务</string>
    <string name="device_number">设备号</string>
    <string name="exit">退出</string>
    <string name="doorbell_set">猫眼设置</string>
    <string name="set">设置</string>
    <string name="calendar">日历</string>
    <string name="file_manager">文件管理</string>
    <string name="bind">绑定</string>
    <string name="browser">浏览器</string>
    <string name="about">关于</string>
    <string name="user_bind_window">用户绑定窗口</string>
    <string name="device_no_">设备号:%s</string>
    <string name="bind_device_hint">此时不能进行视频通话，请尽快绑定设备</string>
    <string name="close_window_hint_format">将在%1$d秒后关闭窗口</string>
    <string name="request_bind_hint">%s请求与您绑定，是否接受？</string>
    <string name="bind_succ">绑定成功</string>
    <string name="am">上午</string>
    <string name="media_record">影像记录</string>
    <string name="visitor_leave_msg">访客留言</string>
    <string name="monitor_switch">监控开关</string>
    <string name="sos_phone">紧急电话</string>
    <string name="system_set">系统设置</string>
    <string name="smart_doorbell">智能猫眼</string>
    <string name="doorbell">门铃</string>
    <string name="doorbell_set_msg">设置按门铃后执行的动作</string>
    <string name="smart_monitor">智能监控</string>
    <string name="monitor_closed">监控已关闭</string>
    <string name="auto_sensor_time">自动感应时间</string>
    <string name="auto_sensor_distance">自动感应距离</string>
    <string name="sensor_set">感应设置</string>
    <string name="sensor_set_msg">设置感应到人后的执行的动作</string>
    <string name="net_push">网络推送</string>
    <string name="videotap">录像</string>
    <string name="video_call">视频呼叫</string>
    <string name="send_msg">发送短信</string>
    <string name="dial">拨打电话</string>
    <string name="leave_message">留言</string>
    <string name="ring_alarm">铃声报警</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="pm">下午</string>
    <string name="sunday">周日</string>
    <string name="saturday">周六</string>
    <string name="friday">周五</string>
    <string name="thursday">周四</string>
    <string name="wednesday">周三</string>
    <string name="tuesday">周二</string>
    <string name="monday">周一</string>
    <string name="lunar_calendar">农历</string>
    <string name="Smartcat_eye">智能猫眼</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期日</string>
    <string name="January">正月</string>
    <string name="February">二月</string>
    <string name="March">三月</string>
    <string name="April">四月</string>
    <string name="May">五月</string>
    <string name="June">六月</string>
    <string name="July">七月</string>
    <string name="August">八月</string>
    <string name="September">九月</string>
    <string name="October">十月</string>
    <string name="November">十一月</string>
    <string name="December">十二月</string>
    <string name="one">初一</string>
    <string name="two">初二</string>
    <string name="three">初三</string>
    <string name="four">初四</string>
    <string name="five">初五</string>
    <string name="six">初六</string>
    <string name="seven">初七</string>
    <string name="eight">初八</string>
    <string name="nine">初九</string>
    <string name="ten">初十</string>
    <string name="eleven">十一</string>
    <string name="Twelve">十二</string>
    <string name="thirteen">十三</string>
    <string name="fourteen">十四</string>
    <string name="fifteen">十五</string>
    <string name="sixteen">十六</string>
    <string name="seventeen">十七</string>
    <string name="eighteen">十八</string>
    <string name="nineteen">十九</string>
    <string name="twenty">二十</string>
    <string name="twentyone">廿一</string>
    <string name="twentytwo">廿二</string>
    <string name="twentythree">廿三</string>
    <string name="twentyfour">廿四</string>
    <string name="twentyfive">廿五</string>
    <string name="twentysix">廿六</string>
    <string name="twentyseven">廿七</string>
    <string name="twentyeight">廿八</string>
    <string name="twentynine">廿九</string>
    <string name="thirty">三十</string>
    <string name="loading">加载中</string>
    <string name="monitor_opened">监控已打开</string>
    <string name="ready_connect">准备就绪，等待被连接</string>
    <string name="connecting">正在连接...</string>
    <string name="waitting">请稍候...</string>
    <string name="set_failure">设置失败</string>
    <string name="doorbell_set_changed">门铃动作已更改</string>
    <string name="bell_set">门铃设置</string>
    <string name="number">号码</string>
    <string name="master_number">主人号码</string>
    <string name="sos_number">SOS号码</string>
    <string name="other">其他</string>
    <string name="rington_volume">铃声及音量</string>
    <string name="ring_alarm_set_msg">设置门铃声、报警铃声及音量</string>
    <string name="video_leave_msg_time">视频留言时间</string>
    <string name="leave_message_time_msg">设置留言模式下视频留言的时间</string>
    <string name="doorbell_videotap_time_set">猫眼录像时间设置</string>
    <string name="doorbell_look_time">猫眼查看时间</string>
    <string name="five_s">5秒</string>
    <string name="ten_s">10秒</string>
    <string name="fifteen_s">15秒</string>
    <string name="twenty_s">20秒</string>
    <string name="fourty_s">40秒</string>
    <string name="one_m">1分钟</string>
    <string name="second">秒</string>
    <string name="volume">音量</string>
    <string name="rington_volume_set_msg">设置门铃及报警声音的音量</string>
    <string name="ring">铃声</string>
    <string name="doorbell_ring">门铃铃声</string>
    <string name="alarm_ring">报警铃声</string>
    <string name="input_no_null">输入不能为空</string>
    <string name="regex_phone">^1[34578]\\d{9}$</string>
    <string name="phone_no_regex">手机号码不匹配</string>
    <string name="no_sim_msg">未检测到SIM卡</string>
    <string name="no_sos_number">SOS号码未设置</string>
    <string name="menu">菜单</string>
    <string name="binded_user_list">已绑定用户列表</string>
    <string name="bind_user_number_max">绑定用户数已达到最大值</string>
    <string name="videoing_no_bind_msg">正在视频通话中，不能进行用户绑定</string>
    <string name="_finish_video_format">%s挂断了与您的通话</string>
    <string name="video_with_user_format">正在与%s视频通话中</string>
    <string name="unbind_user_msg">您确定要取消绑定设备么？</string>
    <string name="running">正在运行</string>
    <string name="doorbell_volume">门铃音量</string>
    <string name="alarm_volume">报警音量</string>
    <string name="more_than_time_msg">超过最大时间，更改为%ds</string>
    <string name="low_than_time_msg">小于最短时间，更改为%ds</string>
    <string name="face_set_msg">设置人脸识别</string>
    <string name="face_set">人脸识别</string>
    <string name="extend_function">扩展功能</string>
    <string name="bluetooth_lock">蓝牙锁</string>
    <string name="no_camera">未检测到摄像头</string>
    <string name="leave_message_audio_start_msg">主人不在家，请再次按下门铃键开始留言</string>
    <string name="leave_message_audio_end_msg">留言结束</string>
    <string name="video_leave_msg">视频记录</string>
    <string name="sensor_set_changed">传感动作已更改</string>
    <string name="send_msg_content_format">【%1$s】%2$s，来自%3$s</string>
    <string name="someone_doorbell">有人按门铃</string>
    <string name="android_version">Android版本</string>
    <string name="wifi_update">无线升级</string>
    <string name="version_code">版本号</string>
    <string name="click_update_name">点击修改设备名称</string>
    <string name="update_success">修改成功</string>
    <string name="update_nickname">修改设备名称</string>
    <string name="unbind_success">解绑成功</string>
    <string name="unbind_failure">解绑失败</string>
    <string name="waiting">请稍候</string>
    <string name="choose_expend_function">选择扩展功能</string>
    <string name="look_outdoor">查看门外</string>
    <string name="input_auth_code">请输入授权码</string>
    <string name="unbind_user">解绑用户</string>
    <string name="adminer">管理员</string>
    <string name="unbind_admin_msg">当前用户是管理员，解绑之后，设备下的所有用户将会一起解绑！</string>
    <!--                   系统设置start             -->
    <string name="wifi_network">无线和网络</string>
    <string name="device">设备</string>
    <string name="personal">个人</string>
    <string name="system">系统</string>

    <string name="wlan">WLAN</string>
    <string name="bluetooth">蓝牙</string>
    <string name="flow_use_desc">流量使用情况</string>
    <string name="more">更多</string>

    <string name="show">显示</string>
    <string name="storage">存储</string>
    <string name="battery">电池</string>
    <string name="app">应用</string>

    <string name="language">语言和输入法</string>
    <string name="mark_reset">备份和重置</string>

    <string name="date_time">日期和时间</string>
    <string name="developer">开发者选项</string>
    <string name="three_s">3秒</string>
    <string name="local_video_start_fail">本地音视频启动失败</string>
    <string name="create_connect_fail">建立连接失败</string>
    <string name="check_update">检查更新</string>
    <string name="go_on">继续</string>
    <string name="down_new_version">下载安装包</string>
    <string name="new_version_msg">检查到有新版本，是否下载更新？</string>
    <string name="download_update">下载更新</string>
    <string name="no_new_version">当前已是最新版本</string>
    <string name="updating">正在升级</string>
    <string name="video_resolution">视频分辨率</string>
    <string name="video_resolution_set_msg">设置视频通话的分辨率</string>
    <string name="download_file_des_failure">文件解析失败</string>
    <string name="start_download">开始下载</string>
    <string name="system_update">系统升级</string>
    <string name="check_update_msg">升级版本检测中...</string>
    <string name="system_updating">系统更新中</string>
    <string name="immediately_setup">立即安装</string>
    <string name="setup_wait">稍后安装</string>
    <string name="battery_low_update_msg">升级需保证电量30%以上</string>
    <string name="downloadable_update">可下载更新</string>
    <string name="downloading">正在下载</string>
    <string name="download_pause">下载已暂停</string>
    <string name="download_completed">下载完成</string>
    <string name="current_newst_version">当前已是最新版本</string>
    <string name="open_lock">打开门锁</string>
    <string name="face_set_closed">人脸识别已关闭</string>
    <string name="face_set_opened">人脸识别已开启</string>
    <string name="unlock_success">开锁成功</string>

    <!--                   系统设置end             -->
    <!--<string name="date_week_format">%d年%d月%d日&#160;%s</string>-->
    <!--<string name="calendar_date_format">农历%d年%s月%s</string>-->
</resources>
