<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/x54"
        android:layout_marginStart="@dimen/x53">

        <TextView
            android:id="@+id/tv_doorbell_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/x10"
            android:drawableTop="@mipmap/icon_my"
            android:gravity="center_horizontal"
            android:text="@string/doorbell_set"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_system_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x54"
            android:layout_toEndOf="@id/tv_doorbell_set"
            android:drawablePadding="@dimen/x10"
            android:drawableTop="@mipmap/icon_xtsz"
            android:gravity="center_horizontal"
            android:text="@string/system_set"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_calendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x54"
            android:layout_toEndOf="@id/tv_system_set"
            android:drawablePadding="@dimen/x10"
            android:drawableTop="@mipmap/icon_rl"
            android:gravity="center_horizontal"
            android:text="@string/calendar"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_file_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x54"
            android:layout_toRightOf="@id/tv_calendar"
            android:drawablePadding="@dimen/x10"
            android:drawableTop="@mipmap/icon_wjgl"
            android:gravity="center_horizontal"
            android:text="@string/file_manager"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_doorbell_set"
            android:layout_marginTop="@dimen/x35"
            android:drawablePadding="@dimen/x10"
            android:drawableTop="@mipmap/icon_spfw"
            android:gravity="center_horizontal"
            android:text="@string/video_service"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_bind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_system_set"
            android:layout_marginLeft="@dimen/x54"
            android:layout_marginTop="@dimen/x35"
            android:layout_toRightOf="@id/tv_video"
            android:drawablePadding="@dimen/x7"
            android:drawableTop="@mipmap/icon_lj"
            android:gravity="center_horizontal"
            android:text="@string/bind"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_browser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_calendar"
            android:layout_marginStart="@dimen/x54"
            android:layout_marginTop="@dimen/x35"
            android:layout_toEndOf="@id/tv_bind"
            android:drawablePadding="@dimen/x7"
            android:drawableTop="@mipmap/icon_llq"
            android:gravity="center_horizontal"
            android:text="@string/browser"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_file_manager"
            android:layout_marginStart="@dimen/x54"
            android:layout_marginTop="@dimen/x35"
            android:layout_toEndOf="@id/tv_browser"
            android:drawablePadding="@dimen/x7"
            android:drawableTop="@mipmap/icon_gy"
            android:gravity="center_horizontal"
            android:text="@string/about"
            android:textColor="@color/white"/>
    </RelativeLayout>
</FrameLayout>