<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_333333"
    android:orientation="vertical"
    tools:context="cn.jcyh.peephole.ui.activity.SetActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/smart_doorbell"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black_333333">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/doorbell"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white"/>

            <RelativeLayout
                android:id="@+id/rl_doorbell_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_doorbell_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:text="@string/doorbell_set"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_doorbell_set"
                    android:paddingLeft="16dp"
                    android:text="@string/doorbell_set_msg"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:text="@string/doorbell"
                android:textColor="@color/white"
                android:textSize="12sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white"/>

            <RelativeLayout
                android:id="@+id/rl_monitor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_smart_monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:text="@string/smart_monitor"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_monitor_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_smart_monitor"
                    android:paddingLeft="16dp"
                    android:text="@string/monitor_closed"
                    android:textColor="@color/white"
                    android:textSize="12sp"/>

                <CheckBox
                    android:id="@+id/cb_monitor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:enabled="false"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white"/>

            <RelativeLayout
                android:id="@+id/rl_sensor_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_sensor_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:text="@string/auto_sensor_time"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sensor_time"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:text="10s"
                    android:textColor="@color/white"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white"/>

            <RelativeLayout
                android:id="@+id/rl_sensor_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_sensor_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:text="@string/auto_sensor_distance"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sensor_distance"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:text="远距离"
                    android:textColor="@color/white"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/white"/>

            <RelativeLayout
                android:id="@+id/rl_sensor_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_sensor_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:text="@string/sensor_set"
                    android:textColor="@color/white"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sensor_set"
                    android:paddingLeft="16dp"
                    android:paddingTop="5dp"
                    android:text="@string/sensor_set_msg"
                    android:textColor="@color/white"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>