<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.jcyh.peephole.ui.activity.BindActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_bind_window"
            android:textColor="@color/black_333333"
            android:textSize="18sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_imei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/device_no_"
        android:textColor="@color/black_333333"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:scaleType="fitStart"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

<!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bind_device_hint"
        android:textColor="@color/gray_888888"
        android:textSize="14sp"/>-->

    <TextView
        android:id="@+id/tv_count_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:text="@string/close_window_hint_format"
        android:textColor="@color/gray_888888"/>
</LinearLayout>