<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:background="@color/white"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <cn.jcyh.peephole.widget.MyDeviceParam
        android:id="@+id/my_net_push"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:text="@string/net_push"
        app:text_color="@color/black_333333"
        app:text_size="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray_dedede"/>

    <cn.jcyh.peephole.widget.MyDeviceParam
        android:id="@+id/my_videotap"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:text="@string/videotap"
        app:text_color="@color/black_333333"
        app:text_size="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray_dedede"/>

    <cn.jcyh.peephole.widget.MyDeviceParam
        android:id="@+id/my_video_call"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:text="@string/video_call"
        app:text_color="@color/black_333333"
        app:text_size="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray_dedede"/>

    <!--<cn.jcyh.peephole.widget.MyDeviceParam-->
        <!--android:id="@+id/my_send_msg"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--app:text="@string/send_msg"-->
        <!--app:text_color="@color/black_333333"-->
        <!--app:text_size="16sp"/>-->

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.5dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:background="@color/gray_dedede"/>-->

    <!--<cn.jcyh.peephole.widget.MyDeviceParam-->
        <!--android:id="@+id/my_dial"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--app:text="@string/dial"-->
        <!--app:text_color="@color/black_333333"-->
        <!--app:text_size="16sp"/>-->

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.5dp"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginRight="16dp"-->
        <!--android:background="@color/gray_dedede"/>-->

    <cn.jcyh.peephole.widget.MyDeviceParam
        android:id="@+id/my_leave_message"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:text="@string/leave_message"
        app:text_color="@color/black_333333"
        app:text_size="16sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/gray_dedede"/>
</LinearLayout>